...
    showDialog(
        context: context,
        builder: (context) {
          return StatefulBuilder(
            builder: (context, StateSetter setState) {
              return AlertDialog(
                  title: const Text("New Project"),
                  actionsAlignment: MainAxisAlignment.spaceBetween,
                  actions: [
                    MaterialButton(
                      onPressed: () {
                        //pop the box
                        Navigator.pop(context);
...
                        //clear the controller and error
                        setState(() {
                          _projectNameController.clear();
                          _projectCreateError = null;
                        });
                      },
                      child: const Text("Cancel"),
                    ),
                    MaterialButton(
                      onPressed: _projectCreateError == null
                          ? () {
                              // close the box
                              Navigator.pop(context);
...
                              setState(() {
                                _projectNameController.clear();
                                _projectCreateError = null;
                              });
                            }
                          : null,
                      child: const Text("Create"),
                    )
                  ],
                  content: Column(
                    mainAxisSize: MainAxisSize.min,
                    children: [
                      //User input for project name
...
            children: [
              Icon(
                DashboardPageIcons.add,
                color: Theme.of(context).colorScheme.onPrimary,
              ),
              Text(
                "Create New",
                style: TextStyle(
                  color: Theme.of(context).colorScheme.onPrimary,
                ),
              )
            ],
          ),
...
                                            MainAxisAlignment.center,
                                        children: [
                                            Icon(
                                              Icons.camera_alt,
                                              size: 80,
                                            ),
                                            Text("Tap to take photo")
                                          ]))),
                        SizedBox(
                          height: constraints.maxHeight * 0.025,
                        ),
                        Row(
                          mainAxisAlignment: MainAxisAlignment.spaceBetween,
...
                                        DashboardPageIcons.edit,
                                        color: Theme.of(context)
                                            .colorScheme
                                            .onPrimary,
                                      ),
                                      Text(
                                        "Edit",
                                        style: TextStyle(
                                          color: Theme.of(context)
                                              .colorScheme
                                              .onPrimary,
                                        ),
                                      )
...
                                              DashboardPageIcons.export,
                                              color: Theme.of(context)
                                                  .colorScheme
                                                  .onInverseSurface,
                                            ),
                                            Text(
                                              "Export",
                                              style: TextStyle(
                                                color: Theme.of(context)
                                                    .colorScheme
                                                    .onInverseSurface,
                                              ),
                                            ),
...
                                              DashboardPageIcons.bin,
                                              color: Theme.of(context)
                                                  .colorScheme
                                                  .error,
                                            ),
                                            Text(
                                              "Delete",
                                              style: TextStyle(
                                                color: Theme.of(context)
                                                    .colorScheme
                                                    .onInverseSurface,
                                              ),
                                            ),
...
        onChanged: _onSearchFieldChanged,
        style: TextStyle(color: Theme.of(context).colorScheme.onPrimary),
        cursorColor: Theme.of(context).colorScheme.onPrimary,
        decoration: InputDecoration(
            filled: true,
            fillColor: blackColour,
            hintText: "Search Project",
            hintStyle:
                TextStyle(color: Theme.of(context).colorScheme.onPrimary),
            hoverColor: Theme.of(context).colorScheme.onPrimary,
            prefixIcon: Padding(
                padding: const EdgeInsets.all(12),
                child: Icon(
...
