...
                  });
                });
                Navigator.of(context).pushReplacement(InstantPageRoute(
                    builder: (context) => const DashboardPage()));
              },
              child: const Text(
                'Save and exit',
                style: TextStyle(fontSize: 18.0),
              ),
            ),
          ),
        ),

...
        //       BottomNavigationBarItem(
        //           icon: Icon(Icons.upload),
        //           label: 'Export'
        //       ),
        //       BottomNavigationBarItem(
        //           icon: Icon(Icons.camera_alt),
        //           label: 'Take photo'
        //       ),
        //     ]
        // ),
      ),
    );
  }
...
