...
                  child: ElevatedButton(
                    onPressed: allowSaveAndExit ? _saveAndExit : null,
                    style: ElevatedButton.styleFrom(
                        foregroundColor: Colors.black,
                        backgroundColor:
                            Theme.of(context).colorScheme.onSurface),
                    child: const Text("Save and continue"),
                  ))
            ]))
      ]),
    );
  }
}
...
